# flask-api-solid-boilerplate

./: .env.development  .env.production  .env.test  .envBase  .flake8  .gitignore  Makefile  README.md  app.py  pyproject.toml  pyrightconfig.json
src/: blueprints.py  cli.py  config.py  container.py  database.py  envs.py  extensions.py  factory.py  tests.py
src/__tests__/: conftest.py
src/__tests__/unit/: test_base_controller_mixin.py  test_controller.py
src/apps/todo/: controller.py  entity.py  mixin.py  module.py  repository.py  service.py
src/apps/todo/schema/: dto.py  request.py  serializers.py
src/core/: controller.py  entity.py  exceptions.py  flask.py  module.py
src/core/mixins/: controller_mixin.py  repository_mixin.py
src/core/types/: db_session.py  http_status.py
src/tests/: conftest.py  test_database.py  test_factory.py
tests/: conftest.py  factory.py
tests/e2e/: test_todo_endpoint.py
tests/unit/: test_database.py  test_factory.py
